--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
 		<link rel="stylesheet" type="text/css" href="css/css.css">
 	</head>
 	<body>
+		<div align="center"><img src="image/logo.png"style="width: 150px;height: 150px;" /></div>
 		<h1 class="title">离子2B2T服务器</h1>
 		<h3 class="text">我的世界服务器</h3>
-		
 		<div id="blink" class="text">2b2t*小游戏*圈地*纯生存</div>
+		<h3 class="text">服务器地址:<span>fgimaxl2.vipnps.vip:34649</span></h3>
+		<h3 class="text">备用地址:<span>free.svipss.top:52182</span></h3>
+		<h3 class="text">版本:<span>1.7.x-1.18.x(离线可进)</span></h3>
+		<h3 class="text">QQ交流群:<span>924123537</span></h3>
+		<h3 class="text">2021年11月14日开服</h3>
+		<h3 class="text" >欢迎加入服务器！</h3>
+		<div style="float:left;color:white;">  ©2022 Minecraft Team LiZi||</div>
+		<div style="float:left;color:white;">服务器邮箱:minecraft_lizi@163.com||</div>
+		<div style="float:left;color:white;">二级域名由Github Inc.提供和托管||</div>
+		<div style="float:left;color:white;">"离子2B2T”是“Minecraft Team LiZi”的Minecraft Java服务器||</div>
 
-		
-		
 		
 	</body>
 	<script>
